# pip-clipboard

./: CHANGELOG.md  README.md  SECURITY.md  file_structure.md
.github/: FUNDING.md  FUNDING.yml
.github/workflows/: build.yml
docs/: that_petey_convo.md
release/: README.md  pip-clip-osd-0.2.0-1.x86_64.rpm  pip-clip-osd-macos-arm64.tar  pip-clip-osd-macos-x64.tar  pip-clip-osd_0.2.0_aarch64.dmg  pip-clip-osd_0.2.0_x64.dmg  pip-clip-osd_0.2.0_x64_en-US.msi
release/pip-clip-osd-all-platforms/: pip-clip-osd-0.2.0-1.x86_64.rpm  pip-clip-osd_0.2.0_amd64.deb  pip-clip-osd_0.2.0_x64_en-US.msi
release/pip-clip-osd-linux-x64/: pip-clip-osd_0.2.0_amd64.deb
src/v..0.0.1/: package.json
src/v..0.0.1/src-tauri/: cargo.toml  repo_layout.md  tauri.conf.json
src/v..0.0.1/src-tauri/src/: main.rs
src/v..0.0.1/ui/: app.js  index.html  styles.css
src/v.0.2.2/src-tauri/: Cargo.toml  tauri.conf.json
src/v.0.2.2/src-tauri/capabilities/: default.json
src/v.0.2.4/src-tauri/src/: main.rs
src/v.0.2.4/ui/: styles.css
src/v0.0.1/: .gitignore
src/v0.0.1/src-tauri/: Cargo.toml  tauri.conf.json
src/v0.0.1/src-tauri/src/: main.rs
src/v0.0.1/ui/: app.js
src/v0.2.4/: package.json
src/v0.2.4/ui/: app.js  index.html
