[package]
name = "pip-clip-osd"
version = "0.2.0"
edition = "2021"
description = "Picture-in-picture clipboard preview — never paste something you regret"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.3"
enigo = "0.2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"

[build-dependencies]
tauri-build = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
